--- a/scheduling/src/main/resources/templates/breaktime/breaktime-list.html
+++ b/scheduling/src/main/resources/templates/breaktime/breaktime-list.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html
 	lang="en"
@@ -8,7 +7,7 @@
 >
 <head>
 
-<title>Student List</title>
+<title>Teacher BreakTime</title>
 
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -97,7 +96,55 @@
 >
 </head>
 <body>
+	<div
+		class="modal fade right"
+		id="modal"
+		tabindex="-1"
+		role="dialog"
+		aria-labelledby="myModalLabel"
+		aria-hidden="true"
+		data-backdrop="true"
+	>
+		<div
+			class="modal-dialog modal-side modal-bottom-right modal-notify modal-info"
+			role="document"
+		>
 
+			<div class="modal-content">
+				<!--Header-->
+
+				<!--Body-->
+				<div class="modal-body ">
+					<div class="col-12">
+						<i
+							class="fa fa-exclamation-circle"
+							style="margin-top: 20px; margin-bottom: 20px; font-size: 100px; color: #C32828;"
+						></i>
+						<h1>Are you sure?</h1>
+						<p>You won't be able to revert this</p>
+					</div>
+
+				</div>
+
+				<!--Footer-->
+				<div
+					class="modal-footer flex-right"
+					style="border-top: none;"
+				>
+					<a
+						id="message_button"
+						class="btn btn-success"
+						style="color: white; margin-right: 10px;"
+					> </a> <a
+						class="btn btn-info"
+						data-dismiss="modal"
+					>Cancel </a>
+
+				</div>
+			</div>
+			<!--/.Content Delete-->
+		</div>
+	</div>
 	<div class="container-fluid rounded">
 		<div
 			class="row container_info"
@@ -111,13 +158,13 @@
 							<div class="col-md-12">
 
 								<a
-									th:href="@{/student/form}"
+									th:href="@{/breaktime/form}"
 									class="btn btn-success"
 									style="margin-bottom: 10px;"
-								>Add Student</a>
+								>Add BreakTime</a>
 								<div class="card">
 									<div class="card-header">
-										<strong class="card-title">Subject List</strong>
+										<strong class="card-title">BreakTime List</strong>
 									</div>
 									<div class="card-body">
 										<table
@@ -126,42 +173,31 @@
 										>
 											<thead>
 												<tr>
-													<th>First Name</th>
-													<th>Last Name</th>
-													<th>Sex</th>
-													<th>Room</th>
-													<th>Shift Name</th>
-													<th>Strand</th>
-													<th>Grade</th>
-													<th>Section</th>
+													<th>Start Time</th>
+													<th>End time</th>
 													<th class="th_end">Update</th>
 													<th class="th_end">Delete</th>
-
 												</tr>
 											</thead>
 											<tbody>
-												<tr th:each="student:${student_list}">
-													<td th:text="${student.firstName}"></td>
-													<td th:text="${student.lastName}"></td>
-													<td th:text="${student.sex}"></td>
-													<td th:text="${student.room_shift.room.roomName}"></td>
-													<td th:text="${student.room_shift.shiftName}"></td>
-													<td th:text="${student.strandAndCourse.strandName}"></td>
-													<td th:text="${student.room_shift.grade}"></td>
-													<td th:text="${student.room_shift.section}"></td>
+												<tr th:each="breaktime: ${break_list}">
+													<td th:text="${breaktime.start_time}">Start time</td>
+													<td th:text="${breaktime.end_time}">End Time</td>
 													<td><a
-														class="btn btn-info btn-sm aButton"
-														th:href="@{/student/update(student_id=${student.id})}"
-														onclick="if (!(confirm('Are you sure you want to delete this Strand?'))) return false"
+														class="btn btn-success btn-sm aButton"
+														data-target="#modal"
+														data-toggle="modal"
+														th:onclick="'UpdateBreakTime('+${breaktime.id}+')'"
 													> <i
 															class="fa fa-pencil"
 															aria-hidden="true"
-														></i>
-													</a></td>
+														></i></a></td>
 													<td><a
+														th:if="${breaktime.room_shift.size() ==0} and ${breaktime.teacher.size() ==0} "
 														class="btn btn-danger btn-sm aButton"
-														th:href="@{/student/delete(student_id=${student.id})}"
-														onclick="if (!(confirm('Are you sure you want to delete this Student?'))) return false"
+														data-target="#modal"
+														data-toggle="modal"
+														th:onclick="'DeleteBreakTimeMain('+${breaktime.id}+')'"
 													> <i
 															class="fa fa-trash"
 															aria-hidden="true"
@@ -215,15 +251,8 @@
 	<script th:src="@{/assets/js/lib/data-table/buttons.print.min.js}"></script>
 	<script th:src="@{/assets/js/lib/data-table/buttons.colVis.min.js}"></script>
 	<script th:src="@{/assets/js/init/datatables-init.js}"></script>
-
-
+	<script th:src="@{/assets/js/Schedule.js}"></script>
 	<script type="text/javascript">
-		//    function button_delete(){
-		// 	   var subject_id = document.getElementById("subject_id").value;
-		//
-		// 	  window.location="/subject/delete?subject_id=" + subject_id;
-		// }
-
 		$(document).ready(function() {
 			$('#bootstrap-data-table-export').DataTable();
 		});
