--- a/scheduling/src/main/resources/templates/teacher/teacher breaktime/teacher-break-check.html
+++ b/scheduling/src/main/resources/templates/teacher/teacher breaktime/teacher-break-check.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html
 	lang="en"
@@ -7,7 +8,8 @@
 >
 <head>
 
-<title>Subject List</title>
+<title>Room Break List</title>
+
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta
@@ -91,7 +93,7 @@
 <!-- Our own Css -->
 <link
 	rel="stylesheet"
-	th:href="@{/assets/css/main.css}"
+	th:href="@{/assets/css/contents.css}"
 >
 </head>
 <body>
@@ -101,128 +103,65 @@
 			class="row container_info"
 			style=""
 		>
-
-			<div class="col-md-5">
-				<h1>Room Shift Break Time Information</h1>
-
-				<form
-					action="#"
-					th:object="${break_object}"
-					th:action="@{/room/break/save}"
-					method="POST"
-				>
-
-					<div class="form-group col-md-12">
-						<input
-							th:field="*{id}"
-							type="hidden"
-							class="form-control"
-							id="subject_id"
-							placeholder="Room BreakId"
-						>
-					</div>
-
-					<div class="form-group col-md-12">
-
-						<label for="subject_code">Start Time</label>
-						<div class="input-group mb-3">
-							<input
-								th:field="*{start_time}"
-								type="time"
-								class="form-control"
-								id="subject_code"
-								placeholder="Start Time"
-							>
-						</div>
-					</div>
-					<div class="form-group col-md-12">
-						<label for="subject_units">End Time</label>
-						<div class="input-group mb-3">
-							<input
-								th:field="*{end_time}"
-								type="time"
-								class="form-control"
-								id="subject_units"
-								placeholder="End Time"
-							>
-						</div>
-					</div>
-
-					<div class="form-group col-md-12">
-						<div class="input-group mb-3">
-							<input
-								type="submit"
-								class="btn btn-success form-control"
-								th:value="${action}"
-							>
-						</div>
-					</div>
-					<div class="form-group col-md-12" th:if="${action != 'Save'}">
-						<div class="input-group mb-3">
-							<a
-								style="color: white;"
-								class="btn btn-danger form-control"
-							> Delete </a>
-						</div>
-					</div>
-				</form>
-			</div>
-
-			<div class="col-md-7">
+			<div class="col-md-12">
 				<div class="content">
 					<div class="animated fadeIn">
 						<div class="row">
 
+
 							<div class="col-md-12">
-								<div class="card">
-									<div class="card-header">
-										<strong class="card-title">Subject List</strong>
-									</div>
-									<div class="card-body">
-										<table
-											id="bootstrap-data-table"
-											class="table table-striped table-bordered"
-										>
-											<thead>
-												<tr>
-													<th>Id</th>
-													<th>Name</th>
-													<th>Code</th>
-													<th>Hour</th>
-													<th>Minute</th>
-													<th>Units</th>
-													<th>Category</th>
 
-												</tr>
-											</thead>
-											<tbody>
-												<!-- 	  <tr th:each="shift: ${room_shifts}">
-											   <td th:text="${subject.id}"></td>
-                                              <td th:text="${subject.subjectName}"></td>
-                                              <td th:text="${subject.subjectCode}"></td>
-                                              <td th:text="${subject.hourCost}"></td>
-                                              <td th:text="${subject.minuteCost}"></td>
-                                              <td th:text="${subject.subjectUnit}"></td>
-                                              <td th:text="${subject.is_Major}"></td>
-                                              </tr>  -->
-											</tbody>
-										</table>
+								<form
+									th:action="@{/teacher/break/save}"
+									th:object="${teacher_object}"
+									method="POST"
+								>
+									<input
+										type="submit"
+										class="btn btn-success"
+										style="margin-bottom: 10px;"
+									    value="Add BreakTime">
+									<div class="card">
+										<div class="card-header">
+											<strong class="card-title">Room Break List</strong>
+										</div>
+										<div class="card-body">
+											<table
+												id="bootstrap-data-table"
+												class="table table-striped table-bordered"
+											>
+												<thead>
+													<tr>
+														<th>Start Time</th>
+														<th>End Time</th>
+														<th>Action</th>
+													</tr>
+												</thead>
+												<tbody>
+
+													<tr th:each="break:${teacher_breaks}">
+														<td th:text="${break.start_time}">asdasd</td>
+														<td th:text="${break.end_time}">asdasd</td>
+														<td><input
+															type="checkbox"
+															name="active"
+															th:field="*{breaktime_teacherList}"
+															th:value="${break.id}"
+														/></td>
+													</tr>
+											</table>
+										</div>
 									</div>
-								</div>
+
+								</form>
 							</div>
-
 
 						</div>
 					</div>
 					<!-- .animated -->
 				</div>
 				<!-- .content -->
-				<a
-					onclick="back()"
-					class="btn btn-info btn-block"
-					title="View"
-					style="margin-top: 10px; margin-bottom: 10px;"
-				> Back </a>
+
 			</div>
 		</div>
 	</div>
@@ -245,7 +184,7 @@
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"
 	></script>
-	<script th:src="@{/assets/js/Schedule.js}"></script>
+
 	<script th:src="@{/assets/js/lib/data-table/datatables.min.js}"></script>
 	<script
 		th:src="@{/assets/js/lib/data-table/dataTables.bootstrap.min.js}"
@@ -258,25 +197,9 @@
 	<script th:src="@{/assets/js/lib/data-table/buttons.print.min.js}"></script>
 	<script th:src="@{/assets/js/lib/data-table/buttons.colVis.min.js}"></script>
 	<script th:src="@{/assets/js/init/datatables-init.js}"></script>
-	<script th:src="@{/assets/js/Schedule.js}"></script>
+
 
 	<script type="text/javascript">
-		$(function() {
-
-			$(".dropdown-menu li a").click(function() {
-
-				$(".btn:first-child").text($(this).text());
-				$(".btn:first-child").val($(this).text());
-
-			});
-
-		});
-		function button_delete() {
-			var subject_id = document.getElementById("subject_id").value;
-
-			window.location = "/subject/delete?subject_id=" + subject_id;
-		}
-
 		$(document).ready(function() {
 			$('#bootstrap-data-table-export').DataTable();
 		});
