--- a/scheduling/src/main/resources/templates/teacher/teacher information/teacher-information-form.html
+++ b/scheduling/src/main/resources/templates/teacher/teacher information/teacher-information-form.html
@@ -93,9 +93,61 @@
 	rel="stylesheet"
 	th:href="@{/assets/css/main.css}"
 >
+<link
+	rel="stylesheet"
+	th:href="@{/assets/css/contents.css}"
+>
 </head>
 <body>
+<div
+		class="modal fade right"
+		id="modal"
+		tabindex="-1"
+		role="dialog"
+		aria-labelledby="myModalLabel"
+		aria-hidden="true"
+		data-backdrop="true"
+	>
+		<div
+			class="modal-dialog modal-side modal-bottom-right modal-notify modal-info"
+			role="document"
+		>
+			
+			<div class="modal-content">	
+				<!--Header-->
 
+				<!--Body-->
+				<div class="modal-body ">
+					<div class="col-12">
+						<i
+							class="fa fa-exclamation-circle"
+							style="margin-top: 20px; margin-bottom: 20px; font-size: 100px; color: #C32828;"
+						></i>
+						<h1>Are you sure?</h1>
+						<p>You won't be able to revert this</p>
+					</div>
+
+				</div>
+
+				<!--Footer-->
+				<div
+					class="modal-footer flex-right"
+					style="border-top: none;"
+				>
+					<a
+						id="message_button"
+						class="btn btn-success"
+						style="color: white; margin-right: 10px;"
+
+					> </a> <a
+						class="btn btn-info"
+						data-dismiss="modal"
+					>Cancel </a>
+
+				</div>
+			</div><!--/.Content Delete-->
+		</div>
+	</div>
 	<div class="container-fluid rounded">
 		<div
 			class="row container_info"
@@ -106,15 +158,16 @@
 				<h1>Teacher Information</h1>
 
 				<form
-					action="#"
-					th:action="@{/student/save}"
+					th:object="${teacher_object}"
+					th:action="@{/teacher/save}"
 					method="POST"
 				>
 
 					<input
+						th:field="*{id}"
 						type="hidden"
 						class="form-control"
-						placeholder="Subject Id"
+						placeholder="Teacjer Id"
 					>
 
 
@@ -126,10 +179,12 @@
 								class="form-control"
 								placeholder="First Name"
 								style="margin-right: 10px;"
+								th:field="*{firstName}"
 							> <input
 								type="text"
 								class="form-control"
 								placeholder="Last Name"
+								th:field="*{lastName}"
 							>
 						</div>
 					</div>
@@ -140,18 +195,20 @@
 							<select
 								style="margin-right: 10px;"
 								class="form-control"
+								th:field="*{sex}"
 							>
 								<!-- selected -->
-								<option value="MALE">Male</option>
-								<option value="FEMALE">Female</option>
+								<option th:value="MALE">Male</option>
+								<option th:value="FEMALE">Female</option>
 							</select> <select
 								style="margin-right: 10px;"
 								class="form-control"
+								th:field="*{lecture_day}"
 							>
 								<!-- selected -->
-								<option>FULLTIME</option>
-								<option>MWF</option>
-								<option>TTH</option>
+								<option th:value="FULLTIME">FULLTIME</option>
+								<option th:value="MWF">MWF</option>
+								<option th:value="TTH">TTH</option>
 
 							</select>
 						</div>
@@ -164,6 +221,7 @@
 								type="text"
 								class="form-control"
 								placeholder="Username"
+								th:field="*{users.username}"
 							>
 						</div>
 					</div>
@@ -173,12 +231,12 @@
 							<input
 								type="time"
 								class="form-control"
-								placeholder="Password"
 								style="margin-right: 10px;"
+								th:field="*{startTime}"
 							> <input
 								type="time"
+								th:field="*{endTime}"
 								class="form-control"
-								
 							>
 						</div>
 					</div>
@@ -191,6 +249,7 @@
 								class="form-control"
 								placeholder="Password"
 								style="margin-right: 10px;"
+								th:field="*{users.password}"
 							> <input
 								type="password"
 								class="form-control"
@@ -199,21 +258,19 @@
 						</div>
 					</div>
 
-
-
-
 					<div class="form-group col-md-12">
 						<div class="input-group mb-3">
 							<input
 								type="submit"
 								class="btn btn-success form-control"
-								value="Save Student"
+								th:value="${action}"
 							>
 						</div>
 					</div>
 					<div class="form-group col-md-12">
 						<div class="input-group mb-3">
 							<a
+								th:if="${action.equals('Update Teacher')}"
 								onclick="button_delete()"
 								style="color: white;"
 								class="btn btn-danger form-control"
@@ -229,21 +286,25 @@
 				<a
 					class="btn btn-success"
 					style="margin-bottom: 10px; color: white;"
-					onclick="ChageTable_RoomShift('break_table')"
-				> <span></span>View Breaktime
+					onclick="ChageTable_Teacher('break_table')"
+					th:if="${action.equals('Update Teacher')}"
+				> View Breaktime
 				</a> <a
+					th:if="${action.equals('Update Teacher')}"
 					class="btn btn-success"
 					style="margin-bottom: 10px; color: white;"
-					onclick="ChageTable_RoomShift('student_table')"
+					onclick="ChageTable_Teacher('student_table')"
 				> View Student</a> <a
 					class="btn btn-success"
 					style="margin-bottom: 10px; color: white;"
-					onclick="ChageTable_RoomShift('schedule_table')"
+					onclick="ChageTable_Teacher('schedule_table')"
 				> View Schedule</a> <a
+					th:if="${action.equals('Update Teacher')}"
 					class="btn btn-success"
 					style="margin-bottom: 10px; color: white;"
-					onclick="ChageTable_RoomShift('schedule_table')"
+					onclick="ChageTable_Teacher('subject_content')"
 				> View Subject</a>
+				
 				<div
 					class="content"
 					id="break_content"
@@ -256,7 +317,7 @@
 								<div class="card">
 									<div class="card-header">
 										<strong class="card-title">BreakTime List</strong> <a
-											th:href="@{/room/break/list/add}"
+											th:href="@{/teacher/break/list/add}"
 											class="btn btn-success"
 											style="float: right;"
 										> Add BreakTime</a>
@@ -275,9 +336,9 @@
 												</tr>
 											</thead>
 											<tbody>
-												<tr>
-													<td></td>
-													<td></td>
+												<tr th:each="break:${teacher_break}">
+													<td th:text="${break.start_time}"></td>
+													<td th:text="${break.end_time}"></td>
 													<td><a
 														class="btn btn-danger btn-sm"
 														style="width: 100%; color: white;"
@@ -306,7 +367,7 @@
 				<div
 					class="content"
 					id="student_content"
-					style="display: block;"
+					style="display: none;"
 				>
 					<div class="animated fadeIn">
 						<div class="row">
@@ -317,6 +378,7 @@
 										<strong class="card-title">Student List</strong> <a
 											class="btn btn-success"
 											style="float: right; color: white;"
+											th:if="${action.equals('Update Teacher')}"
 										> Add Student</a>
 									</div>
 									<div class="card-body">
@@ -433,7 +495,75 @@
 					<!-- .animated -->
 				</div>
 				<!-- .content -->
-				<!-- .content -->
+
+				<div
+					class="content"
+					id="subject_content"
+					style="display: block;"
+				>
+					<div class="animated fadeIn">
+						<div class="row">
+
+							<div class="col-md-12">
+								<div class="card">
+									<div class="card-header">
+										<strong class="card-title">Subject List</strong> <a
+											th:href="@{/teacher/subject/list}"
+											class="btn btn-success"
+											style="float: right;"
+										>Add Subject</a>
+									</div>
+									<div class="card-body">
+										<table
+											style="width: 100%;"
+											id="subject_table"
+											class="table table-striped table-bordered"
+										>
+											<thead>
+											<tr>
+													<th>Name</th>
+													<th>Code</th>
+													<th>Hour</th>
+													<th>Minute</th>
+													<th>Units</th>
+													<th>Category</th>
+													<th class="th_end">Delete</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr th:each="subject: ${teacher_subject}">
+													<td th:text="${subject.subjectName}"></td>
+													<td th:text="${subject.subjectCode}"></td>
+													<td th:text="${subject.hourCost}"></td>
+													<td th:text="${subject.subjectUnit}"></td>
+													<td th:text="${subject.minuteCost}"></td>
+													<td th:text="${subject.is_Major}"></td>
+													<td><a
+														class="btn btn-danger btn-sm aButton"
+														th:onclick="'DeleteSubjectTeacher_id('+${subject.Id}+')'"
+														data-target="#modal"
+														data-toggle="modal"
+													> <i
+															class="fa fa-trash"
+															aria-hidden="true"
+														></i>
+													</a></td>	
+												</tr>
+											</tbody>
+										</table>
+
+
+									</div>
+
+								</div>
+							</div>
+
+
+						</div>
+					</div>
+					<!-- .animated -->
+				</div>
+
 				<a
 					th:href="@{/subject/list}"
 					class="btn btn-info btn-block"
