Re Create the teacher work time

--- a/scheduling/src/main/resources/templates/MainView/main-view.html
+++ b/scheduling/src/main/resources/templates/MainView/main-view.html
@@ -136,6 +136,14 @@
 							class="menu-icon fas fa-clock"
 						></i>Teacher BreakTime
 					</a></li>
+					<li onclick="change('/teacher/subjects',this)"><a> <i
+							class="menu-icon fas fa-book-open"
+						></i>Teacher Subjects
+					</a></li>
+					<li onclick="change('/teacher/lecture/list',this)"><a> <i
+							class="menu-icon fas fa-book-open"
+						></i>Teacher Lectures
+					</a></li>
 					<li class="menu-title">Student</li>
 
 					<li onclick="change('/student/list',this)"><a> <i
@@ -226,9 +234,8 @@
 						alt="Logo"
 					></a> <a
 						class="navbar-brand hidden"
-						href="./"
 					><img
-						src="../../images/logo2.png"
+
 						alt="Logo"
 					></a> <a
 						id="menuToggle"
