--- a/scheduling/src/main/resources/static/assets/css/Schedule.css
+++ b/scheduling/src/main/resources/static/assets/css/Schedule.css
@@ -1,18 +1,26 @@
-.blocks .btn{
-    margin: 0 5px;
-    border-radius: 0;
+.blocks .btn {
+	margin: 0 5px;
+	border-radius: 0;
 }
 
-table button{
-  width: 40%;
+table button {
+	width: 40%;
 }
+
 input[type=checkbox] {
-    transform: scale(5);
+	transform: scale(5);
 }
-.dataTables_filter{
-	float:right;
+
+.dataTables_filter {
+	float: right;
 }
-ul li{
+
+ul li {
 	cursor: pointer;
 }
 
+@media only screen and (min-width: 760px) {
+	aside.left-panel{
+		display:block !important;
+	}
+}
