--- a/scheduling/src/main/resources/templates/subject/subject list/subject-list-form.html
+++ b/scheduling/src/main/resources/templates/subject/subject list/subject-list-form.html
@@ -1,4 +1,4 @@
-w<!DOCTYPE html>
+<!DOCTYPE html>
 <html
 	lang="en"
 	dir="ltr"
@@ -98,9 +98,7 @@ w<!DOCTYPE html>
 
 	<div class="container-fluid rounded">
 		<div
-			class="row container_info"
-			style=""
-		>
+			class="row container_info">
 
 			<div class="col-md-5">
 				<h1>Subject Information</h1>
