--- a/scheduling/src/main/resources/templates/teacher/teacher information/teacher-information-form.html
+++ b/scheduling/src/main/resources/templates/teacher/teacher information/teacher-information-form.html
@@ -99,7 +99,7 @@
 >
 </head>
 <body>
-<div
+	<div
 		class="modal fade right"
 		id="modal"
 		tabindex="-1"
@@ -112,8 +112,8 @@
 			class="modal-dialog modal-side modal-bottom-right modal-notify modal-info"
 			role="document"
 		>
-			
-			<div class="modal-content">	
+
+			<div class="modal-content">
 				<!--Header-->
 
 				<!--Body-->
@@ -138,14 +138,14 @@
 						id="message_button"
 						class="btn btn-success"
 						style="color: white; margin-right: 10px;"
-
 					> </a> <a
 						class="btn btn-info"
 						data-dismiss="modal"
 					>Cancel </a>
 
 				</div>
-			</div><!--/.Content Delete-->
+			</div>
+			<!--/.Content Delete-->
 		</div>
 	</div>
 	<div class="container-fluid rounded">
@@ -203,13 +203,11 @@
 							</select> <select
 								style="margin-right: 10px;"
 								class="form-control"
-								th:field="*{lecture_day}"
+								th:field="*{workType}"
 							>
 								<!-- selected -->
 								<option th:value="FULLTIME">FULLTIME</option>
-								<option th:value="MWF">MWF</option>
-								<option th:value="TTH">TTH</option>
-
+								<option th:value="PARTTIME">PART TIME</option>
 							</select>
 						</div>
 					</div>
@@ -225,21 +223,7 @@
 							>
 						</div>
 					</div>
-					<div class="form-group col-md-12">
-						<label>Start Time and End time </label>
-						<div class="input-group mb-3">
-							<input
-								type="time"
-								class="form-control"
-								style="margin-right: 10px;"
-								th:field="*{startTime}"
-							> <input
-								type="time"
-								th:field="*{endTime}"
-								class="form-control"
-							>
-						</div>
-					</div>
+
 
 					<div class="form-group col-md-12">
 						<label>Password </label>
@@ -288,8 +272,7 @@
 					style="margin-bottom: 10px; color: white;"
 					onclick="ChageTable_Teacher('break_table')"
 					th:if="${action.equals('Update Teacher')}"
-				> View Breaktime
-				</a> <a
+				> View Breaktime </a> <a
 					th:if="${action.equals('Update Teacher')}"
 					class="btn btn-success"
 					style="margin-bottom: 10px; color: white;"
@@ -303,8 +286,13 @@
 					class="btn btn-success"
 					style="margin-bottom: 10px; color: white;"
 					onclick="ChageTable_Teacher('subject_content')"
-				> View Subject</a>
-				
+				> View Subject</a> <a
+					th:if="${action.equals('Update Teacher')}"
+					class="btn btn-success"
+					style="margin-bottom: 10px; color: white;"
+					onclick="ChageTable_Teacher('lecture_content')"
+				> View Lecture</a>
+
 				<div
 					class="content"
 					id="break_content"
@@ -363,7 +351,77 @@
 					<!-- .animated -->
 				</div>
 				<!-- .content -->
+				<div
+					class="content"
+					id="lecture_content"
+					style="display: none;"
+				>
+					<div class="animated fadeIn">
+						<div class="row">
 
+							<div class="col-md-12">
+								<div class="card">
+									<div class="card-header">
+										<strong class="card-title">Lectures List</strong> <a
+											th:href="@{/teacher/lecture/form}"
+											class="btn btn-success"
+											style="float: right;"
+										> Add Lecture</a>
+									</div>
+									<div class="card-body">
+										<table
+											style="width: 100%;"
+											id="lecture_table"
+											class="table table-striped table-bordered"
+										>
+											<thead>
+												<tr>
+													<th>Start Time</th>
+													<th>End Time</th>
+													<th>Remaining Time</th>
+													<th>Lecture Day</th>
+													<th class="th_end">Update</th>
+													<th class="th_end">Delete</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr th:each="lecture:${teacher_lecture}">
+													<td th:text="${lecture.startTime}"></td>
+													<td th:text="${lecture.endTime}"></td>
+													<td th:text="${lecture.remainingtTime}"></td>
+													<td th:text="${lecture.lectureDay}"></td>
+													<td><a
+														class="btn btn-info btn-sm"
+														style="width: 100%; color: white;"
+													> <i
+															class="fa fa-pencil"
+															aria-hidden="true"
+														></i>
+													</a></td>
+													<td><a
+														class="btn btn-danger btn-sm"
+														style="width: 100%; color: white;"
+													> <i
+															class="fa fa-trash"
+															aria-hidden="true"
+														></i>
+													</a></td>
+												</tr>
+											</tbody>
+										</table>
+
+
+									</div>
+
+								</div>
+							</div>
+
+
+						</div>
+					</div>
+					<!-- .animated -->
+				</div>
+				<!-- .content -->
 				<div
 					class="content"
 					id="student_content"
@@ -520,7 +578,7 @@
 											class="table table-striped table-bordered"
 										>
 											<thead>
-											<tr>
+												<tr>
 													<th>Name</th>
 													<th>Code</th>
 													<th>Hour</th>
@@ -547,7 +605,7 @@
 															class="fa fa-trash"
 															aria-hidden="true"
 														></i>
-													</a></td>	
+													</a></td>
 												</tr>
 											</tbody>
 										</table>
